--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,13 @@
         android:backgroundTint="#313435"
         android:src="@drawable/iconovirus" />
 
+    <ImageView
+        android:id="@+id/ivBoton"
+        android:layout_width="583dp"
+        android:layout_height="50dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="0dp"
+        android:src="@drawable/boton"
+        android:visibility="visible" />
+
 </LinearLayout>
