--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,15 @@
     tools:visibility="visible">
 
     <ImageView
+        android:id="@+id/botonAjustes"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="0dp"
+        android:visibility="visible"
+        app:srcCompat="@drawable/botonajustes" />
+
+    <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
@@ -23,11 +32,20 @@
 
     <ImageView
         android:id="@+id/ivBoton"
-        android:layout_width="1219dp"
+        android:layout_width="547dp"
         android:layout_height="50dp"
         android:layout_gravity="end"
         android:layout_marginEnd="0dp"
-        android:src="@drawable/boton"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:src="@drawable/botonsalir" />
+
+    <ImageView
+        android:id="@+id/ajustesFondo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ajustesfondo" />
 
 </LinearLayout>
