--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,40 +14,30 @@
 
     <ImageView
         android:id="@+id/botonAjustes"
-        android:layout_width="68dp"
-        android:layout_height="49dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_gravity="end"
         android:layout_marginEnd="0dp"
-        android:layout_x="0dp"
-        android:layout_y="0dp"
         android:visibility="visible"
         app:srcCompat="@drawable/botonajustes" />
 
     <ImageView
         android:layout_width="50dp"
-        android:layout_height="51dp"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="130dp"
-        android:layout_x="420dp"
-        android:layout_y="123dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
         android:background="#313435"
         android:backgroundTint="#313435"
         android:src="@drawable/iconovirus" />
 
     <ImageView
         android:id="@+id/ivBoton"
-        android:layout_width="49dp"
-        android:layout_height="56dp"
-        android:layout_row="0"
-        android:layout_column="2"
+        android:layout_width="547dp"
+        android:layout_height="50dp"
         android:layout_gravity="end"
         android:layout_marginEnd="0dp"
-        android:layout_x="762dp"
-        android:layout_y="-1dp"
-        android:src="@drawable/botonsalir"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:src="@drawable/botonsalir" />
 
     <ImageView
         android:id="@+id/ajustesFondo"
@@ -58,17 +48,4 @@
         android:visibility="invisible"
         app:srcCompat="@drawable/ajustesfondo" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="27dp"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_weight="1"
-        android:layout_x="385dp"
-        android:layout_y="84dp"
-        android:text="NOMBREAPP"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:drawableTint="#050505" />
-
-</AbsoluteLayout>
+</LinearLayout>
