--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,9 +17,7 @@
         android:layout_width="68dp"
         android:layout_height="49dp"
         android:layout_gravity="end"
-        android:layout_marginEnd="0dp"
-        android:layout_x="0dp"
-        android:layout_y="0dp"
+        android:layout_marginStart="0dp"
         android:visibility="visible"
         app:srcCompat="@drawable/botonajustes" />
 
@@ -27,24 +25,16 @@
         android:id="@+id/ivBoton"
         android:layout_width="49dp"
         android:layout_height="56dp"
-        android:layout_row="0"
-        android:layout_column="2"
         android:layout_gravity="end"
-        android:layout_marginEnd="0dp"
-        android:layout_x="762dp"
-        android:layout_y="-1dp"
+        android:layout_marginStart="679dp"
         android:src="@drawable/botonsalir"
         android:visibility="visible" />
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="51dp"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="130dp"
-        android:layout_x="400dp"
-        android:layout_y="133dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
         android:background="#313435"
         android:backgroundTint="#313435"
         android:src="@drawable/iconovirus" />
@@ -53,23 +43,17 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_weight="1"
-        android:layout_x="357dp"
-        android:layout_y="97dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
         android:text="NOMBREAPP"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:drawableTint="#050505" />
 
     <ImageView
         android:id="@+id/ajustesFondo"
-        android:layout_width="858dp"
-        android:layout_height="521dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="10"
-        android:layout_x="-57dp"
-        android:layout_y="-41dp"
         android:visibility="invisible"
         app:srcCompat="@drawable/ajustesfondo" />
 
@@ -77,12 +61,12 @@
         android:id="@+id/botonjugar"
         android:layout_width="156dp"
         android:layout_height="96dp"
-        android:layout_x="147dp"
-        android:layout_y="304dp"
+        android:layout_marginTop="300dp"
+        android:layout_centerHorizontal="true"
         android:backgroundTint="#000000"
         android:clickable="true"
         android:text="JUGAR"
         android:textColor="#FFFFFF"
         android:textSize="36sp" />
 
-</AbsoluteLayout>
+</RelativeLayout>
