--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,19 +24,6 @@
         app:srcCompat="@drawable/botonajustes" />
 
     <ImageView
-        android:id="@+id/ivBoton"
-        android:layout_width="49dp"
-        android:layout_height="56dp"
-        android:layout_row="0"
-        android:layout_column="2"
-        android:layout_gravity="end"
-        android:layout_marginEnd="0dp"
-        android:layout_x="762dp"
-        android:layout_y="-1dp"
-        android:src="@drawable/botonsalir"
-        android:visibility="visible" />
-
-    <ImageView
         android:layout_width="50dp"
         android:layout_height="51dp"
         android:layout_row="0"
@@ -48,6 +35,19 @@
         android:background="#313435"
         android:backgroundTint="#313435"
         android:src="@drawable/iconovirus" />
+
+    <ImageView
+        android:id="@+id/ivBoton"
+        android:layout_width="49dp"
+        android:layout_height="56dp"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:layout_gravity="end"
+        android:layout_marginEnd="0dp"
+        android:layout_x="762dp"
+        android:layout_y="-1dp"
+        android:src="@drawable/botonsalir"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/textView2"
@@ -68,21 +68,38 @@
         android:layout_height="521dp"
         android:layout_gravity="center"
         android:layout_weight="10"
-        android:layout_x="-57dp"
-        android:layout_y="-41dp"
+        android:layout_x="-42dp"
+        android:layout_y="-36dp"
         android:visibility="invisible"
         app:srcCompat="@drawable/ajustesfondo" />
 
     <Button
         android:id="@+id/botonjugar"
         android:layout_width="156dp"
-        android:layout_height="96dp"
-        android:layout_x="147dp"
-        android:layout_y="304dp"
+        android:layout_height="80dp"
+        android:layout_x="332dp"
+        android:layout_y="250dp"
         android:backgroundTint="#000000"
         android:clickable="true"
         android:text="JUGAR"
         android:textColor="#FFFFFF"
         android:textSize="36sp" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="770dp"
+        android:layout_y="315dp"
+        app:srcCompat="@drawable/info" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="820dp"
+        android:layout_height="495dp"
+        android:layout_x="0dp"
+        android:layout_y="0dp"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/infofondo" />
 
 </AbsoluteLayout>
