--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/mapa_espa_ita"
+        app:srcCompat="@drawable/mapa_juego"
         tools:layout_editor_absoluteX="-73dp"
         tools:layout_editor_absoluteY="0dp" />
 
