--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/absoluteLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pantallainicio"
@@ -14,92 +15,92 @@
 
     <ImageView
         android:id="@+id/botonAjustes"
-        android:layout_width="68dp"
-        android:layout_height="49dp"
-        android:layout_gravity="end"
-        android:layout_marginEnd="0dp"
-        android:layout_x="0dp"
-        android:layout_y="0dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="Ajustes"
         android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/botonajustes" />
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="51dp"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="130dp"
-        android:layout_x="400dp"
-        android:layout_y="133dp"
-        android:background="#313435"
-        android:backgroundTint="#313435"
-        android:src="@drawable/iconovirus" />
+        android:id="@+id/imageView2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@android:color/transparent"
+        android:contentDescription="Icono preliminar"
+        android:scaleType="centerInside"
+        android:src="@drawable/iconovirus"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.43" />
 
     <ImageView
         android:id="@+id/ivBoton"
-        android:layout_width="49dp"
-        android:layout_height="56dp"
-        android:layout_row="0"
-        android:layout_column="2"
-        android:layout_gravity="end"
-        android:layout_marginEnd="0dp"
-        android:layout_x="762dp"
-        android:layout_y="-1dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="Salir"
         android:src="@drawable/botonsalir"
-        android:visibility="visible" />
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="27dp"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_weight="1"
-        android:layout_x="357dp"
-        android:layout_y="97dp"
-        android:text="NOMBREAPP"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/nombre_aplicacion"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:drawableTint="#050505" />
+        app:drawableTint="#050505"
+        app:layout_constraintBottom_toTopOf="@+id/botonjugar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/ajustesFondo"
-        android:layout_width="858dp"
-        android:layout_height="521dp"
-        android:layout_gravity="center"
-        android:layout_weight="10"
-        android:layout_x="-42dp"
-        android:layout_y="-36dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="Fondo ajustes"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ajustesfondo" />
 
     <Button
         android:id="@+id/botonjugar"
-        android:layout_width="156dp"
-        android:layout_height="80dp"
-        android:layout_x="332dp"
-        android:layout_y="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#000000"
         android:clickable="true"
         android:text="JUGAR"
         android:textColor="#FFFFFF"
-        android:textSize="36sp" />
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2" />
 
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="770dp"
-        android:layout_y="315dp"
-        app:srcCompat="@drawable/info" />
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/botonAjustes"
+        app:srcCompat="@drawable/info"
+        tools:layout_editor_absoluteX="16dp" />
 
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="820dp"
-        android:layout_height="495dp"
-        android:layout_x="0dp"
-        android:layout_y="0dp"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/infofondo" />
-
-</AbsoluteLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
