--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/absoluteLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pantallainicio"
+    android:background="@drawable/fondo_covid_rojo"
     android:backgroundTintMode="screen"
     android:foregroundTintMode="add"
     android:orientation="horizontal"
@@ -60,7 +60,8 @@
         android:layout_marginBottom="16dp"
         android:text="@string/nombre_aplicacion"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:drawableTint="#050505"
+        android:textColor="#FFFFFF"
+        app:drawableTint="#000000"
         app:layout_constraintBottom_toTopOf="@+id/botonjugar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
