--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:srcCompat="@drawable/botonajustes" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iconoPantallaMenu"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@android:color/transparent"
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/nombreApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -66,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/iconoPantallaMenu"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
@@ -93,16 +93,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView2" />
+        app:layout_constraintTop_toBottomOf="@id/nombreApp" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/botonInfo"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/botonAjustes"
-        app:srcCompat="@drawable/info" />
+        app:srcCompat="@drawable/info_white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
