--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -107,4 +107,17 @@
         app:layout_constraintTop_toBottomOf="@+id/botonAjustes"
         app:srcCompat="@drawable/info_white" />
 
+    <ImageView
+        android:id="@+id/botonhelp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="@color/black"
+        android:scaleType="centerCrop"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonInfo"
+        app:srcCompat="@drawable/botonhelp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
