Icono cambiado también en la pantalla principal

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -31,9 +31,9 @@
         android:layout_height="100dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@android:color/transparent"
-        android:contentDescription="Icono preliminar"
+        android:contentDescription="Icono app"
         android:scaleType="centerInside"
-        android:src="@drawable/iconovirus"
+        android:src="@drawable/MYC_icono"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
@@ -60,8 +60,8 @@
         android:layout_marginBottom="16dp"
         android:text="@string/nombre_aplicacion"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/black"
-        app:drawableTint="#000000"
+        android:textColor="@color/white"
+        app:drawableTint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/botonjugar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
