Nueva versión imagen mapa colores

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -28,6 +28,7 @@
         android:background="#C4EBFC"
         android:contentDescription="@string/mapa"
         android:src="@drawable/mapa_juego"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
