--- a/app/src/main/res/layout-land/activity_ajustes.xml
+++ b/app/src/main/res/layout-land/activity_ajustes.xml
@@ -7,21 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ajustes_popup">
 
-    <Switch
-        android:id="@+id/sonido"
-        android:layout_width="173dp"
-        android:layout_height="74dp"
-        android:text="Efectos de sonido"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.703" />
-
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="77dp"
-        android:layout_height="67dp"
+        android:layout_width="101dp"
+        android:layout_height="87dp"
         android:src="@drawable/botonajustes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,26 +18,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.223" />
 
-    <ToggleButton
-        android:id="@+id/musica"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="musica"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="58dp"
-        android:layout_height="41dp"
+        android:layout_width="64dp"
+        android:layout_height="49dp"
         android:text="Musica"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintHorizontal_bias="0.251"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintVertical_bias="0.577" />
+
+    <SeekBar
+        android:id="@+id/volumen"
+        android:layout_width="232dp"
+        android:layout_height="26dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.605"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.566" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
