--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -17,13 +17,14 @@
         android:id="@+id/botonAjustes"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/ajustes"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/botonajustes"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/botonajustes" />
 
     <ImageView
         android:id="@+id/iconoPantallaMenu"
@@ -45,13 +46,14 @@
         android:id="@+id/ivBoton"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/salir"
         android:src="@drawable/botonsalir"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.975"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/nombreApp"
@@ -69,11 +71,15 @@
 
     <ImageView
         android:id="@+id/ajustesFondo"
-        android:layout_width="731dp"
-        android:layout_height="411dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/fondo_ajustes"
         android:elevation="5dp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ajustesfondo" />
 
     <Button
@@ -90,7 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nombreApp"
-        app:layout_constraintVertical_bias="0.092" />
+        app:layout_constraintVertical_bias="0.315" />
 
     <ImageButton
         android:id="@+id/botonInfo"
