--- a/app/src/main/res/layout-land/activity_help_1.xml
+++ b/app/src/main/res/layout-land/activity_help_1.xml
@@ -8,13 +8,13 @@
 
     <ImageView
         android:id="@+id/help"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="870dp"
+        android:layout_height="484dp"
         android:background="#666666"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.523"
         app:srcCompat="@drawable/ayuda_1" />
 
     <Button
@@ -35,10 +35,26 @@
         android:layout_height="54dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/casa" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="227dp"
+        android:layout_height="85dp"
+        android:background="#194319"
+        android:text="Aquí se debe introducir el nombre del virus. (Si no se introduce nada, aparece por defecto el nombre Covid-19)"
+        android:textAlignment="center"
+        android:textColor="#F4EBEB"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="@+id/help"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.53" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
