--- a/app/src/main/res/layout-land/activity_help_2.xml
+++ b/app/src/main/res/layout-land/activity_help_2.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/help2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="949dp"
+        android:layout_height="367dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +21,12 @@
         android:id="@+id/casa"
         android:layout_width="59dp"
         android:layout_height="54dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.047"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/help2"
+        app:layout_constraintVertical_bias="0.038"
         app:srcCompat="@drawable/casa" />
 
     <Button
@@ -31,10 +37,10 @@
         android:text="ANTERIOR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.024"
+        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.887" />
+        app:layout_constraintVertical_bias="0.928" />
 
     <Button
         android:id="@+id/sig"
@@ -44,8 +50,24 @@
         android:text="SIGUIENTE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/help2"
-        app:layout_constraintHorizontal_bias="0.754"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.887" />
+        app:layout_constraintVertical_bias="0.928" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="239dp"
+        android:layout_height="111dp"
+        android:background="#194319"
+        android:text="Una vez pusto el nombre de nuestro virus, se abrirá esta pantalla, en la que aparecen por defecto los datos del país en general (número de personas, número de infectados y número de muertos)"
+        android:textAlignment="center"
+        android:textColor="#F3EEEE"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.365"
+        app:layout_constraintStart_toStartOf="@+id/help2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.861" />
 </androidx.constraintlayout.widget.ConstraintLayout>
