--- a/app/src/main/res/layout-land/activity_help_4.xml
+++ b/app/src/main/res/layout-land/activity_help_4.xml
@@ -7,9 +7,9 @@
     tools:context=".help_4">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/help4"
+        android:layout_width="818dp"
+        android:layout_height="396dp"
         android:background="#666666"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,4 +17,46 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ayuda_4" />
+
+    <ImageView
+        android:id="@+id/casa"
+        android:layout_width="59dp"
+        android:layout_height="54dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/help4"
+        app:layout_constraintVertical_bias="0.047"
+        app:srcCompat="@drawable/casa" />
+
+    <Button
+        android:id="@+id/ant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#3F51B5"
+        android:text="ANTERIOR"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.927" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="227dp"
+        android:layout_height="77dp"
+        android:background="#194319"
+        android:text="Una vez pulsado el botón de infectar estando en la ciudad que deseamos, aparecerá el nuevo número de infectados de la misma"
+        android:textAlignment="center"
+        android:textColor="#F1EAEA"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.553"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.867" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
